Add UI material which renders above geometry
Show the material in editor by default, without having to click on the
  eye icon in selector lists

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "url": "https://jansharp.github.io"
   },
   "dependencies": {},
+  "hideInEditor": false,
   "license": "MIT",
   "vpmDependencies": {
     "com.vrchat.worlds": "^3.7.4",
